<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popularSongs"
    android:padding="8dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageInPopularSongs"
        android:layout_width="54dp"
        android:layout_height="47dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@mipmap/actor" />

    <TextView
        android:id="@+id/songNameInPopularSongs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_name"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/albumInPopularSongs"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageInPopularSongs"/>

    <TextView
        android:id="@+id/albumInPopularSongs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album_name"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/songNameInPopularSongs"
        app:layout_constraintStart_toStartOf="@id/songNameInPopularSongs"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>