<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@color/darkblack"
        android:padding="8dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recentlyLikeRecyclerView"
            android:layout_width="fill_parent"
            android:layout_height="194dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rockTextcategory3"
            tools:listitem="@layout/item_hiphop_in_mainpage" />

        <TextView
            android:id="@+id/rockTextcategory3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/main_recently"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ludovkyRecyclerView" />

        <TextView
            android:id="@+id/rockTextcategory2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/main_hiphop"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rockRecyclerView" />

        <TextView
            android:id="@+id/homeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/main_home"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rockRecyclerView"
            android:layout_width="fill_parent"
            android:layout_height="194dp"
            android:layout_marginTop="8dp"
            android:scrollbars="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rockTextcategory"
            app:reverseLayout="true"
            tools:listitem="@layout/item_rock_category_in_mainpage">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/rockTextcategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/main_rock"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeTextView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ludovkyRecyclerView"
            android:layout_width="fill_parent"
            android:layout_height="194dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rockTextcategory2"
            tools:listitem="@layout/item_ludovky_in_mainpage" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>