<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/songView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkblack">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/albumListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:background="@color/darkblack">

        <ImageView
            android:id="@+id/imageSong"
            android:layout_width="fill_parent"
            android:layout_height="327dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameAlbum"
            app:srcCompat="@mipmap/kali_foreground" />

        <TextView
        android:id="@+id/playFromAlbum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="2dp"
        android:text="@string/song_playingfromalbum"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/nameAlbum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/nameAlbum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/album_name"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playFromAlbum" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="fill_parent"
        android:layout_height="26dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="24dp"
        android:progressBackgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameActor" />

    <TextView
        android:id="@+id/songName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="4dp"
        android:text="@string/song_name"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nameActor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageSong" />

    <TextView
        android:id="@+id/nameActor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="189dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="191dp"
        android:layout_marginBottom="36dp"
        android:text="@string/performer_name"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/songName" />

    <ImageView
        android:id="@+id/previousSong"
        android:layout_width="46dp"
        android:layout_height="44dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:srcCompat="@android:drawable/ic_media_previous" />

    <ImageView
        android:id="@+id/nextSong"
        android:layout_width="46dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/pauseSong"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:srcCompat="@android:drawable/ic_media_next" />

        <ImageView
            android:id="@+id/pauseSong"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toEndOf="@+id/previousSong"
            app:layout_constraintTop_toBottomOf="@+id/seekBar"
            app:srcCompat="@android:drawable/ic_media_pause" />

        <ImageView
            android:id="@+id/playSong"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toStartOf="@+id/nextSong"
            app:layout_constraintStart_toEndOf="@+id/pauseSong"
            app:layout_constraintTop_toBottomOf="@+id/seekBar"
            app:srcCompat="@android:drawable/ic_media_play" />

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="26dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/arrow_down_float" />


    <ImageView
        android:id="@+id/addToFavorites"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/star_big_off" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>